# Audio_Deepfake_Detection

./: .gitignore  README.md  ablation_log.txt  comp_log.txt  pyproject.toml  run_log.txt
configs/: default.yaml
notebooks/: paper_figures.ipynb
results/: training_history.csv
results/checkpoints/ablation_full/: eval_results.json
results/checkpoints/ablation_no_consistency/: eval_results.json
results/checkpoints/ablation_no_dann/: eval_results.json
results/checkpoints/ablation_no_mixstyle/: eval_results.json
results/checkpoints/ablation_single_scale_mid/: eval_results.json
results/tables/: ablation_results.csv  comparative_results.csv
scripts/: download_datasets.py  evaluate.py  generate_ablation_figures.py  generate_dummy_data.py  generate_figures.py  run_ablation.py  run_all.py  run_comparison.py  run_cv.py  train.py
src/: config.py
src/data/: augment.py  datasets.py  spectrograms.py
src/evaluation/: comparative.py  metrics.py  statistical.py
src/models/: aasist.py  components.py  condetection.py  factory.py  lcnn.py  rawnet2.py
src/training/: ablation.py  cv_trainer.py  losses.py  scheduler.py  trainer.py
src/visualization/: figures.py  gradcam.py  tsne.py
tests/: test_comparative.py  test_cv.py  test_data.py  test_losses.py  test_metrics.py  test_models.py  test_training.py
