[project]
name = "condetection-dann"
version = "0.1.0"
description = "ConDetection-DANN: Cross-Domain Audio Deepfake Detection with Domain Adversarial Training"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.1",
    "torchaudio>=2.1",
    "librosa>=0.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "pyyaml>=6.0",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pylint>=3.0",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = [
    "E501",   # line length handled by formatter
    "N803",   # argument name should be lowercase (ML convention: X, B, T, etc.)
    "N806",   # variable in function should be lowercase
    "N812",   # lowercase imported as non-lowercase (torch.nn.functional as F is standard)
    "B905",   # zip without strict= (not always needed)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pylint.main]
max-line-length = 120

[tool.pylint."messages_control"]
disable = [
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-few-public-methods",
    "too-many-statements",
    "too-many-branches",
    "invalid-name",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "import-error",
    "no-member",
    "not-callable",
    "import-outside-toplevel",    # intentional lazy imports for optional deps
    "consider-using-from-import", # import torch.nn as nn is universal ML convention
    "abstract-method",            # PyTorch autograd.Function only needs forward/backward
    "arguments-differ",           # Function.forward has different signature by design
    "broad-exception-caught",     # intentional for data loading robustness
    "use-dict-literal",           # dict(...) fine for complex dynamic builds
    "duplicate-code",             # training boilerplate is expected
    "protected-access",           # _dann_lambda accessed deliberately
    "unused-argument",            # hook callbacks require fixed signatures
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
